# covert-channel-tutorial

./: .gitmodules  CMakeLists.txt  Dockerfile  README.md  isca19.sh
cc-libs/: CMakeLists.txt  crc16.h  fr_util.c  fr_util.h  l1.c  l1.h  low.h  util.c  util.h
cc-tools/contention-l1d/: CMakeLists.txt  Viz_L1D_contention.sh  create_l1d_contention.c  measure_l1d_contention.c
channels/fr/: CMakeLists.txt  receiver.c  sender.c
channels/pp-l1d/: CMakeLists.txt  receiver.c  sender.c
channels/pp-llc/: CMakeLists.txt  receiver.c  sender.c
