set(CMAKE_C_FLAGS "-Wall -Wextra -O1 -fPIC")
set(CMAKE_VERBOSE_MAKEFILE ON)
add_executable (pp-llc-send sender.c)
add_executable (pp-llc-send_debug sender.c)
target_link_libraries (pp-llc-send LINK_PUBLIC util)
target_link_libraries (pp-llc-send_debug LINK_PUBLIC util)
add_executable (pp-llc-recv receiver.c)
add_executable (pp-llc-recv_debug receiver.c)
target_link_libraries (pp-llc-recv LINK_PUBLIC util)
target_link_libraries (pp-llc-recv_debug LINK_PUBLIC util)
