set(CMAKE_C_FLAGS "-Wall -Wextra -O1 -fPIC")
# set(CMAKE_VERBOSE_MAKEFILE ON)
add_executable (pp-llc-send sender.c)
target_link_libraries (pp-llc-send LINK_PUBLIC util)
add_executable (pp-llc-recv receiver.c)
target_link_libraries (pp-llc-recv LINK_PUBLIC util)

add_executable (pp-llc-send_debug sender.c)
add_executable (pp-llc-recv_debug receiver.c)
target_link_libraries (pp-llc-send_debug LINK_PUBLIC util)
target_link_libraries (pp-llc-recv_debug LINK_PUBLIC util)
set_target_properties(pp-llc-send_debug PROPERTIES COMPILE_FLAGS "-DDEBUG")
set_target_properties(pp-llc-recv_debug PROPERTIES COMPILE_FLAGS "-DDEBUG")
file(COPY ${PROJECT_SOURCE_DIR}/extern/pp-llc-repo/pp-llc-benchmark.py DESTINATION ${CMAKE_BINARY_DIR}/)
